refactor: split http module purpose